--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -205,34 +205,34 @@
     "    # lo imprimo para saber nada mas\n",
     "    print(nodo.nombre)\n",
     "    # agrego el link entre el ndodo buscado y el nodo de donde salió\n",
-    "    vertices.append((nodo_anterior, nodo)) #REVISAR ESTO, pq no funciona sin?\n",
+    "    vertices.append((nodo_anterior, nodo))\n",
+    "    \n",
     "    # si no esta vacio me va a servir para encontrar nuevos nodos\n",
     "    if (len(nodo.palabras)>0):\n",
     "        # checkeo con que otros nodos hay relacion (osea que esta en su lista de palabras)\n",
     "        for i in nodos:\n",
-    "            if nodo.nombre in i.palabras and i.nombre != nodo.nombre: # no me interesa que se vincule consigo mismo\n",
+    "            if nodo.nombre in i.palabras and i.nombre != nodo.nombre:\n",
     "                vertices.append((nodo,i))\n",
+    "                \n",
     "        # lo voy a usar para buscar mas nodos, por lo tanto lo tengo que guardar para luego vincularlo\n",
     "        nodo_anterior = nodo\n",
+    "        \n",
     "        # consigo un nuevo nodo\n",
     "        palabras_nodo_anterior = list(nodo_anterior.palabras)\n",
     "        nodo = Nodo(palabras_nodo_anterior[random.randrange(0, len(palabras_nodo_anterior))])\n",
-    "        \n",
     "    else:\n",
     "        # si elnodo esta vacio uso el anterior y no me intrrumpe la ejecucion del programa\n",
     "        nodo =  Nodo(random.choice(list(nodo_anterior.palabras)))\n",
-    "\n",
     " return nodo\n",
     "\n",
     "\n",
     "\n",
-    "nodos = list()                          # lista que va a tener todos los nodos del grafico\n",
-    "vertices = list()                       # lista que contiene los vertices\n",
-    "grafo = nx.DiGraph()                    # creo el grafo\n",
+    "nodos = list()             # lista que va a tener todos los nodos del grafico\n",
+    "vertices = list()          # lista que contiene los vertices\n",
+    "grafo = nx.DiGraph()       # creo el grafo\n",
     "\n",
     "nodo_central = input(\"Ingrese una palabra para buscar sus coincidencias en Wikipedia! \")\n",
     "cant_coincidencia = int (input(\"Ingrese cantidad de coincidencias \"))\n",
-    "\n",
     "nodo_maestro = Nodo(nodo_central)\n",
     "primer_nodo = nodo_maestro\n",
     "\n",
@@ -248,7 +248,7 @@
     "\n",
     "nodo = logica_nodos(cant_coincidencia,nodo,nodo_anterior,vertices) # llamo funcion \n",
     "   \n",
-    "nodos = set(nodos)                # uso un set para eliminar repeticiones\n",
+    "nodos = set(nodos)            # uso un set para eliminar repeticiones\n",
     "grafo.add_nodes_from(list(nodos))\n",
     "grafo.add_edges_from(vertices)\n",
     "\n",
@@ -259,7 +259,6 @@
     "fig, ax= plt.subplots(figsize=(15,15))  # tamaño de \"universo\", para el desarrollo del grafo\n",
     "nx.draw_networkx(grafo, pos, with_labels=True, node_size=800, font_size=8,node_color=node_colors, connectionstyle=\"arc3,rad=0.2\",  arrows=True, arrowstyle='-|>', arrowsize=7)\n",
     "plt.show()\n",
-    "\n",
     "\n",
     "# # para actualizar la lista de paginas (DEJAR COMENTADO)\n",
     "# with open(\"data.pickle\", \"wb\") as f:\n",
@@ -310,10 +309,9 @@
    ],
    "source": [
     "####### EJEMPLO ramificacion CENTRAL ##########\n",
-    "\n",
     "nombre = input(\"Mande una palabra:\")\n",
     "\n",
-    "# #lista que va a tener todos los nodos del grafico\n",
+    "#lista que va a tener todos los nodos del grafico\n",
     "nodos = list()\n",
     "# #lista que contiene los vertices\n",
     "vertices = list()\n",
@@ -327,7 +325,7 @@
     "nodo = Nodo(list(centro.palabras)[random.randrange(0,len(centro.palabras))])\n",
     "cantidad_nodo = centro\n",
     "\n",
-    "for i in range(20):\n",
+    "for i in range(20): #cantidad de nodos dibujados\n",
     "    nodo = Nodo(list(centro.palabras)[random.randrange(0,len(centro.palabras))])\n",
     "    print(nodo.nombre)\n",
     "    if (len(nodo.palabras)>0):\n",
@@ -356,11 +354,8 @@
     "#copia de grafo con los nodos mas importantes \n",
     "    ranking = nx.betweenness_centrality(grafo).items()\n",
     "    r = [x[1] for x in ranking]\n",
-    "\n",
     "    m = sum(r)/len(r) # centralidad\n",
-    "\n",
     "    t = m*3 # mantiene los nodos con promedio de aparicion --> si queres que sean mas o menos los coloreados en rojo modifica esto\n",
-    "   \n",
     "    nodo_importante = grafo.copy()\n",
     "\n",
     "    #Se remueve los nodos que no aparecen\n",
@@ -374,7 +369,6 @@
     "#Se recibe los nodos mas importantes\n",
     "nodo_importante = mas_relevancia(grafo)\n",
     "\n",
-    "\n",
     "nx.draw(grafo,\n",
     "        pos,\n",
     "        node_color='orange',\n",
@@ -384,7 +378,6 @@
     "        connectionstyle = \"arc3, rad=0.5\",\n",
     "        font_size = 12\n",
     "       )\n",
-    "\n",
     "\n",
     "#Se dibuja los nodos mas importantes con un estilo diferente\n",
     "for i in range(0,len(nodo_importante)):\n",
@@ -396,9 +389,8 @@
     "                           node_size=1000)\n",
     "    nx.draw_networkx_labels(nodo_importante,pos,font_size=12)\n",
     "\n",
-    "\n",
     "#Se muestra la grafica\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
